--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -26,13 +26,19 @@ lipidomics |>
 ```
 
 ```{r}
+#' create_table_descriptive_stats
+#'
+#' @param df 
+#'
+#' @returns df/tibble
+
 create_table_descriptive_stats <- function(data) {
   data |>
-    group_by(metabolite) |>
-    summarize(across(value, list(mean = mean, sd = sd))) |>
-    mutate(across(where(is.numeric), \(x) round(x, digits = 1))) |>
-    mutate(MeanSD = glue::glue("{value_mean} ({value_sd})")) |>
-    select(Metabolite = metabolite, "Mean SD" = MeanSD)
+    dplyr::group_by(metabolite) |>
+    dplyr::summarize(dplyr::across(value, list(mean = mean, sd = sd))) |>
+    dplyr::mutate(dplyr::across(where(is.numeric), \(x) round(x, digits = 1))) |>
+    dplyr::mutate(MeanSD = glue::glue("{value_mean} ({value_sd})")) |>
+    dplyr::select(Metabolite = metabolite, "Mean SD" = MeanSD)
 }
 
 # Use it like this, which should give the same output as before.
