--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -127,3 +127,22 @@ fit_model <- function(data, model) {
 
 fit_model(just_cholesterol, class ~ value)
 ```
+
+## Creating the model results
+
+```{r}
+#' Generating model results
+#'
+#' @param data df, lipidomics
+#'
+#' @returns model results, a tibble
+
+create_model_results <- function(data) {
+data |>
+  dplyr::filter(metabolite == "Cholesterol") |>
+  preprocess() |> #calling our previous function
+  fit_model(class ~ value) #calling our previous function
+}
+
+create_model_results(lipidomics)
+```
